# splice-playground

./: .gitignore  README.md  docker-compose.yml.txt  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  PATCH_NOTES_STEP3_frontend_ready_2026-03-13.md  PATCH_NOTES_backend_overlay_2026-03-13.md  README.md  README_APPLY.md  README_RESTORE.md  README_STEP3_backend_patch.md  README_STEP4_BASELINE_PIPELINE.md  compose.yml  main.py  pyproject.toml  test_model.py
backend/app/: __init__.py  main.py
backend/db/: demo.py
backend/dev_gui/: README.md  app.py  pyproject.toml
backend/patch_notes/: PATCH_NOTES_BACKEND_NO_SOURCE_CHANGES_2026-04-16.md  PATCH_NOTES_DEV_GUI_ISOLATED_PROJECT_AND_ROOT_RESTORE_2026-03-29.md  PATCH_NOTES_DEV_GUI_STREAMLIT_COMPAT_2026-03-29.md  PATCH_NOTES_EC2_SPLIT_DEPLOY_AND_DEVGUI_2026-03-15.md  PATCH_NOTES_G5_STEP4_WORKER_READY_2026-04-12.md  PATCH_NOTES_STEP4_BASELINE_2026-03-13.md  PATCH_NOTES_STEP4_DEDUPE_2026-04-15.md  PATCH_NOTES_STEP4_FIX_2026-03-13.md  PATCH_NOTES_STEP4_STATEFUL_2TRACK_2026-03-14.md  PATCH_NOTES_T3_STEP4_BASELINE_READY_2026-04-12.md  README_STEP4_STATEFUL_2TRACK.md  backend_step4_backend_audit_2026-04-14.md  backend_step4_backend_patch_notes_2026-04-14.md
backend/scripts/: compact_structure_jobs.py  ingest_step4_baseline.py  run_step4_jobs.py  step4_smoke_test.py  validate_step4_baseline.py
backend/validation_pkg/: README.md
scrpts/: FASTA_preprocess.ipynb  README.md  aibio2025_mission4_minjoonkang.ipynb  main.py  pyproject.toml
scrpts/data/: paralog_gene.txt
scrpts/src/: AlphaFold2.ipynb
(+220 files in other folders)
