[project]
name = "scrpts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alphagenome>=0.5.0",
    "bio>=1.8.1",
    "h5py>=3.15.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyfaidx>=0.9.0.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "supabase>=2.28.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
